--- a/dataViz/workingBrain_metaData.Rmd
+++ b/dataViz/workingBrain_metaData.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE)
 ```{r loadLibs, results="hide"}
 library(readxl); library(tidyverse); library(dplyr); library(naniar); library(ggplot2); library(jsonlite);
 library(data.tree); library(circlepackeR); library(igraph); library(ggraph);library(networkD3); library(htmlwidgets);
-library(collapsibleTree)
+library(collapsibleTree); library(reticulate)
  
 ```
 
@@ -211,6 +211,44 @@ fields_p
 
 ```
 
+### networkD3
+
+```{r}
+nodes <- read.csv("~/Downloads/sunbelt2019/Data files/Dataset1-Media-Example-NODES.csv")
+links <- read.csv("~/Downloads/sunbelt2019/Data files/Dataset1-Media-Example-EDGES.csv")
+```
+
+
+```{r}
+head(nodes)
+head(links)
+```
+
+
+```{r}
+
+links.d3 <- data.frame(from=as.numeric(factor(links$from))-1, 
+                       to=as.numeric(factor(links$to))-1 )
+
+nodes.d3 <- cbind(idn=factor(nodes$media, levels=nodes$media), nodes) 
+
+```
+
+
+```{r}
+forceNetwork(Links = links.d3, Nodes = nodes.d3, Source="from", Target="to",
+               NodeID = "name", Group = "type.label",linkWidth = 1,
+               linkColour = "#afafaf", fontSize=12, zoom=F, legend=T,
+               Nodesize=6, opacity = 0.8, charge=-300, 
+               width = 600, height = 400, arrows = T)
+```
+
+
+
+```{r}
+library('visNetwork') 
+visNetwork(nodes, links, width="100%", height="400px")
+```
 
 
 
