--- a/RR/workingBrain_PR_Intro.tex
+++ b/RR/workingBrain_PR_Intro.tex
@@ -113,7 +113,7 @@
 \textsuperscript{1} Sussex Neuroscience, School of Life Sciences, University of Sussex, Falmer, UK\\\textsuperscript{2} School of Psychology, University of Sussex, Falmer, UK\\\textsuperscript{3} Sackler Centre for Consciousness Science, University of Sussex, Falmer, UK}
 \authornote{
 
-Correspondence concerning this article should be addressed to Raul Duke, Falmer, Brighton, BN1 9QG, United Kingdom. E-mail: r.ungureanu@sussex.ac.uk}
+Correspondence concerning this article should be addressed to Raul Duke, Brighton, BN1 9QG, United Kingdom. E-mail: r.ungureanu@sussex.ac.uk}
 \keywords{keywords\newline\indent Word count: X}
 \DeclareDelayedFloatFlavor{ThreePartTable}{table}
 \DeclareDelayedFloatFlavor{lltable}{table}
@@ -162,17 +162,18 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \begin{document}
 \maketitle
 
-\hypertarget{introduction}{%
-\section{Introduction}\label{introduction}}
+\begin{center}
 
-\begin{verbatim}
-"How we spend our days is, 
-    of course, 
-how we spend our lives."
-                    - Annie Dillard
-\end{verbatim}
 
-The truth is, we spend most of our waking days working. Most people will spend a third of their adult lives at work ({\textbf{???}}). The average Briton works approximately 42 hours per week ({\textbf{???}}), with an additional \textasciitilde4.9 hours spent on commuting ({\textbf{???}}). More than 18\% of the working-age population will further `volunteer' an average of 7.5 hours a week in unpaid overtime ({\textbf{???}}). It should come as no surprise then that our work environment deeply affects our health and wellbeing. However, the neurophysiology associated with occupational factors, the mechanism through which it influences wellbeing, and mediates vulnerability to mental health symptoms, is largely unexplored. As a result, we are failing to recognise what aspects of occupational health and brain function put certain individuals at risk, and not others. This is a key research priority, as gaining an insight into this issues would allow the development of preventative interventions, medical or ergonomic, that protect individuals in their workplace and the labour force as a whole. The aim of the present study is, therefore, to fill this important knowledge gap and begin characterising the neural markers of occupational wellbeing.
+    "How we spend our days is,
+        of course
+    how we spend our lives."
+    
+                        - Annie Dillard
+
+\end{center}
+
+The truth is, we spend most of our waking days working. Most people will spend a third of their adult lives at work ({\textbf{???}}). The average Briton works approximately 42 hours per week (``British workers putting in longest hours in the EU, TUC analysis finds \textbar{} TUC,'' n.d.), with an additional \textasciitilde4.9 hours spent on commuting (``Annual commuting time is up 21 hours compared to a decade ago, finds TUC \textbar{} TUC,'' n.d.). More than 18\% of the working-age population will further `volunteer' an average of 7.5 hours a week in unpaid overtime (``Workers in the UK put in more than £32 billion worth of unpaid overtime last year - TUC analysis \textbar{} TUC,'' n.d.). It should come as no surprise then that our work environment deeply affects our health and wellbeing. However, the neurophysiology associated with occupational factors, the mechanism through which it influences wellbeing, and mediates vulnerability to mental health symptoms, is largely unexplored. As a result, we are failing to recognise what aspects of occupational health and brain function put certain individuals at risk, and not others. This is a key research priority, as gaining an insight into this issues would allow the development of preventative interventions, medical or ergonomic, that protect individuals in their workplace and the labour force as a whole. The aim of the present study is, therefore, to fill this important knowledge gap and begin characterising the neural markers of occupational wellbeing.
 
 Three primary occupational factors have long been recognized and studied as risk factors for a variety of health and wellbeing outcomes: \emph{(i)} working hours; \emph{(ii)} shift work; \emph{(iii)} un- and under-employemt(Caruso, 2014; \emph{how does unemployment affect our wellbeing? What can reduce the damaging effects of unemployment? What happens to wellbeing when people (re)enter work?}, n.d.; Wong, Chan, \& Ngan, 2019). There is ample evidence that long hours negatively impact physiological health, both self-perceived {[}@{]}, and objectively measured (e.g.~higher risk of cardiovascular disease (Bannai \& Tamakoshi, 2014)); mental health (e.g.~higher incidence of depressive (Kim, Park, Lee, \& Kim, 2016), and anxiety (Bannai \& Tamakoshi, 2014) symptoms); cognitive function (e.g.~diminished performance on working memory and digit substitution tasks (Kajitani, McKenzie, \& Sakata, 2018)) and health behaviours (e.g.~higher rate of tobacco and alcohol consumption (Lallukka et al., 2008)). Recent evidence suggests that even the established norm of \textasciitilde40h/week can be detrimental to cognitive ability (Barck-Holst, Nilsonne, Åkerstedt, \& Hellgren, 2017). Interventional studies on Swedish social workers found that reducing working hours (while retaining full salary) has positive, long-lasting effects (e.g.~sustained at 18 months follow-up) on sleep, subjective stress measures, fatigue, negative emotion, and cognition {[}Barck-Holst et al. (2017); Schiller2017a{]}. Together these findigs suggests that long working hours are not only harmful to our wellbeing, but could also be potentially counter-productive. Furthermore, it is not only \emph{how much}, but also \emph{when} we work that can negatively affect our wellbeing. Shift work, usually defined as work outside the regular daytime work schedule of 9am-5pm {[}@{]}, has been linked with a wide range of negative health outcomes, physical (e.g.~increased risk of cancer, cardiovascular disease, diabetes, and asthma (Maidstone et al., 2020)), and mental (e.g.~anxiety {[}@{]} and depression {[}@{]}). Shift work has also been shown to affect cognitive performance (Vetter, Juda, \& Roenneberg, 2012, p. @Baulk2009), with some evidence to suggest long-term effects (Weinmann, Vetter, Karch, Nowak, \& Radon, 2018). On the other hand, involuntary underemployment is one of the most damaging factors influencing individual wellbeing, with potentially permanent effects that extend far beyond what would be expected from reduced income, and similar in severity to bereavement (\emph{how does unemployment affect our wellbeing? What can reduce the damaging effects of unemployment? What happens to wellbeing when people (re)enter work?}, n.d.).
 
@@ -187,6 +188,9 @@ Three primary occupational factors have long been recognized and studied as risk
 
 \hypertarget{refs}{}
 \begin{cslreferences}
+\leavevmode\hypertarget{ref-TUC2}{}%
+Annual commuting time is up 21 hours compared to a decade ago, finds TUC \textbar{} TUC. (n.d.). Retrieved from \url{https://www.tuc.org.uk/news/annual-commuting-time-21-hours-compared-decade-ago-finds-tuc}
+
 \leavevmode\hypertarget{ref-Bannai2014}{}%
 Bannai, A., \& Tamakoshi, A. (2014). The association between long working hours and health: A systematic review of epidemiological evidence. \emph{Scandinavian Journal of Work, Environment \& Health}, \emph{40}(1), 5--18. \url{https://doi.org/10.5271/sjweh.3388}
 
@@ -195,6 +199,9 @@ Barck-Holst, P., Nilsonne, Å., Åkerstedt, T., \& Hellgren, C. (2017). Reduced 
 
 \leavevmode\hypertarget{ref-Baulk2009}{}%
 Baulk, S. D., Fletcher, A., Kandelaars, K. J., Dawson, D., \& Roach, G. D. (2009). A field study of sleep and fatigue in a regular rotating 12-h shift system. \emph{Applied Ergonomics}, \emph{40}(4), 694--698. \url{https://doi.org/10.1016/j.apergo.2008.06.003}
+
+\leavevmode\hypertarget{ref-TUC1}{}%
+British workers putting in longest hours in the EU, TUC analysis finds \textbar{} TUC. (n.d.). Retrieved from \url{https://www.tuc.org.uk/news/british-workers-putting-longest-hours-eu-tuc-analysis-finds}
 
 \leavevmode\hypertarget{ref-Caruso2014}{}%
 Caruso, C. C. (2014). Negative impacts of shiftwork and long work hours. \emph{Rehabilitation Nursing}, \emph{39}(1), 16--25. \url{https://doi.org/10.1002/rnj.107}
@@ -222,6 +229,9 @@ Weinmann, T., Vetter, C., Karch, S., Nowak, D., \& Radon, K. (2018). Shift work 
 
 \leavevmode\hypertarget{ref-Wong2019}{}%
 Wong, K., Chan, A. H. S., \& Ngan, S. C. (2019). The effect of long working hours and overtime on occupational health: A meta-analysis of evidence from 1998 to 2018. \emph{International Journal of Environmental Research and Public Health}, \emph{16}(12). \url{https://doi.org/10.3390/ijerph16122102}
+
+\leavevmode\hypertarget{ref-TUC3}{}%
+Workers in the UK put in more than £32 billion worth of unpaid overtime last year - TUC analysis \textbar{} TUC. (n.d.). Retrieved from \url{https://www.tuc.org.uk/news/workers-uk-put-more-\%7B/pounds\%7D32-billion-worth-unpaid-overtime-last-year-tuc-analysis}
 \end{cslreferences}
 
 \endgroup
