--- a/RR/workingBrain_RR_litReview.bib
+++ b/RR/workingBrain_RR_litReview.bib
@@ -355,6 +355,11 @@ title = {{Altered regional cerebral blood flow associated with mood and sleep in
 volume = {15},
 year = {2019}
 }
+@misc{TUC1,
+title = {{British workers putting in longest hours in the EU, TUC analysis finds | TUC}},
+url = {https://www.tuc.org.uk/news/british-workers-putting-longest-hours-eu-tuc-analysis-finds},
+urldate = {2020-06-12}
+}
 @misc{Marquie2002,
 abstract = {This article presents the objectives and methodology of a French prospective study on aging, health, and work called VISAT. Its purpose is to examine hypotheses on how and to what extent working conditions favorably or unfavorably influence the availability of an individual's physiological and psychological resources, including cognitive ones, in relation to how aging also affects those resources. The study is based on data gathered during the yearly health examinations of a sample of 3,237 employees 32, 42, 52, and 62 years old at the time of the first data collection in 1996. The group of 62-year-olds was mainly comprised of retired people. A second wave of data collection is began in 2001. The data includes information about past and present work situations, medical data and measures supplied by occupational physicians, and aspects of life outside of work.},
 author = {Marqui{\'{e}}, J. C. and Jansou, P. and Baracat, B. and Martinaud, Corinne and Gonon, O. and Niezborala, M. and Ruidavets, J. B. and Fonds, Herve and Esquirol, Y.},
@@ -608,6 +613,11 @@ title = {{Influence of work shift on glutamic acid and gamma-aminobutyric acid (
 volume = {192},
 year = {2011}
 }
+@misc{TUC2,
+title = {{Annual commuting time is up 21 hours compared to a decade ago, finds TUC | TUC}},
+url = {https://www.tuc.org.uk/news/annual-commuting-time-21-hours-compared-decade-ago-finds-tuc},
+urldate = {2020-06-12}
+}
 @article{Charpentier2020,
 annote = {From Duplicate 2 (How representative are neuroimaging samples ? Large-scale evidence for trait anxiety differences between MRI and behaviour-only research participants . - Charpentier, Caroline J; Faulkner, Paul; Pool, Eva R; Ly, Verena; Tollenaar, Marieke S; Lisa, M; Fransen, Aniek; Yamamori, Yumeya; Lally, N{\'{i}}all; Mkrtchian, Anahit; Valton, Vincent; Kausche, Franziska M; Wanke, Nadine; Giarrizzo, Alessio; Pulcu, Erdem)
 
@@ -812,6 +822,11 @@ pmid = {18607201},
 title = {{Functional neuroimaging insights into how sleep and sleep deprivation affect memory and cognition}},
 volume = {21},
 year = {2008}
+}
+@misc{TUC3,
+title = {{Workers in the UK put in more than {\pounds}32 billion worth of unpaid overtime last year - TUC analysis | TUC}},
+url = {https://www.tuc.org.uk/news/workers-uk-put-more-{\pounds}32-billion-worth-unpaid-overtime-last-year-tuc-analysis},
+urldate = {2020-06-12}
 }
 @article{Weinmann2018,
 abstract = {Background: The effect of shift work on impairment of cognition in later life has not yet been sufficiently investigated. Therefore, we aimed at testing the feasibility of a large-scale epidemiologic study examining this putative association in a pilot study. Methods: Between January and April 2017, a cross-sectional study invited a random sample of 425 former and current employees of a German university hospital aged 55 years and older to undergo a cognitive test battery (including the Repeatable Battery for the Assessment of Neuropsychological Status, Trail Making Test, Letter-Number Span, and Vocabulary Test) and to complete a self-administered questionnaire on socio-demographic characteristics, chronotype, sleep, occupational history including shift work, and medical history. Fifty percent of the invitees were registered in the hospital's occupational records as currently working or having worked in a shift system. The feasibility of a large-scale study was evaluated by the response of the study sample and the completeness of data. In addition, we calculated the prevalence of shift work and cognitive impairment in the study population. Results: Seventy five subjects (18{\%}) completed the questionnaire, of whom 47 (11{\%} of the total sample) participated in cognitive testing. In all but four items assessed in the questionnaire, the proportion of missing data was below 10 {\%}, suggesting that the quality of collected data can be considered as high. Eighty percent of the participants reported that they ever worked in a shift system, indicating selective participation by exposure to shift work. With respect to chronotype, the majority of the study subjects rated themselves as rather evening type, while a quarter considered themselves as definite morning type. All cognitive tests could be carried out completely. We observed slight difficulties in at least one of the cognitive tests in 17 participants (36{\%}) while two participants (4{\%}) showed more pronounced signs of cognitive impairment. Conclusion: The present pilot study only partially supported the feasibility of the planned large-scale study. As response rates were low and depended on exposure to shift work, a better way of sampling and recruitment needs to be identified. The questionnaire and the test battery appear to be viable instruments.},
